# persist

./: .gitignore  DESIGN.md  README.md  SPEC.md  claude_loop.py  claude_runner.py  default.nix  flake.nix  package.nix  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
claude_loop/: __init__.py  agent.py  common.py  fixed.py
commands/: agent.md
hooks/: hooks.json
persist/: __init__.py  common.py  fixed.py  session.py
skills/go/: SKILL.md
skills/loop/: SKILL.md
skills/loop-agent/: SKILL.md
skills/loop-status/: SKILL.md
skills/loop-stop/: SKILL.md
skills/persist/: SKILL.md
skills/persist-status/: SKILL.md
skills/persist-stop/: SKILL.md
skills/status/: SKILL.md
skills/stop/: SKILL.md
tests/: helpers.py  test_core.py  test_e2e.py
