[project]
name = "claude-loop"
version = "0.1.0"
description = "Coding loop for Claude Code using stop hooks."
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
claude-loop = "claude_loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
