[project]
name = "persist"
version = "0.1.0"
description = "Persistent coding sessions for Claude Code using stop hooks."
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
persist = "persist:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["persist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
